# python-nmr-parser

./: .gitignore  LICENSE  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  PARQUET_DESIGN.md  PARSE_NMR_USAGE.md  README.md  TEST.md  pyproject.toml  setup.py
batch_results/: acquisition_parameters.csv  lipoprotein_fractions.csv  metabolite_statistics.csv  quantification_long.csv  quantification_wide.csv
docs/: README.md  conf.py  index.rst
examples/: README.md  batch_processing_example.py  extend_lipo_example.py  parse_nmr_example.py  process_spectrum_example.py  read_brxqc_pla_example.py  read_brxqc_uri_example.py  read_brxsm_pla_example.py  read_brxsm_uri_example.py  read_experiment_example.py  read_lipo_example.py  read_pacs_example.py  read_params_example.py  read_quant_example.py  scan_folder_example.py
src/nmr_parser/: __init__.py  version.py
src/nmr_parser/core/: __init__.py  experiment.py  folders.py  logger.py  parameters.py  parse_nmr.py  spectrum.py
src/nmr_parser/processing/: __init__.py  lipoprotein_calc.py  utils.py
src/nmr_parser/reference/: __init__.py  tables.py
src/nmr_parser/reference/data/: README.md  plasma_pacs_report.xml  plasma_qc_report_2.xml  urine_qc_report.xml
src/nmr_parser/xml_parsers/: __init__.py  eretic.py  lipoproteins.py  pacs.py  quality_control.py  quantification.py  title.py
tests/: README.md  conftest.py  test_examples.py  test_experiment.py  test_lipoproteins.py  test_parameters.py  test_parse_nmr.py  test_quantification.py  test_reference_tables.py  test_spectrum.py  test_utils.py  test_xml_parsers.py
tests/data/: CITATION  urine_quant_report_e.xml  xwinnmr_acqus
tests/data/EXTERNAL-comet-nmr-urine-R20/10/: acqu  acqus  fid  scon
tests/data/EXTERNAL-comet-nmr-urine-R20/10/pdata/1/: 1i  1r  outd  title
tests/data/hydroxyproline/1dno-d2o-7-g/: 1r.cpr  1r.fb  1r.inf  1r.pl  acqus  procs  title
