[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmr-parser"
version = "0.4.0"
description = "Parse NMR IVDr data from Bruker instruments"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Julien Wist", email = "julien.wist@murdoch.edu.au"},
    {name = "Reika Masuda", email = "reika.masuda@murdoch.edu.au"},
]
keywords = ["nmr", "bruker", "spectroscopy", "metabolomics", "ivdr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.3.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
duckdb = [
    "duckdb>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/phenological/python-nmr-parser"
Repository = "https://github.com/phenological/python-nmr-parser"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nmr_parser = ["reference/data/*.csv", "reference/data/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=nmr_parser --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
